--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -8,7 +8,7 @@ dependencies:
     - pandas==2.2.2
     - numpy==1.26.4
     - simpy==4.0.2
-    - matplotlib==3.9.1.post1
+    - matplotlib==3.9.1
     - plotly==5.23.0
     - streamlit==1.37.0
     - streamlit_folium==0.22.0
